 * workflow can override the top subject field and the options from a set
 
2006-12-12 cjg
 * Added a way to override parameters of plugins.
 * Added "advertised" option to import/export plugins to allow them to
    still work, but not get advertised that they are available.
 * Added examples to plugins.pl

2006-12-12 cjg
 * namedset fields can have an option param. This is largely used to limit
    the options shown in workflows.

2006-12-12 cjg
 * New from data now handles compound datastructures
 * XML export now run through XML::tidy.
 * Import/Export XML does something nice with compound fields.
 * Fixed some $plugin->params which should have been ->param

2006-12-13 cjg
 * set_value now does not abort if the field is not a real field, but it
    still gives a warning.
 * Added tidy method to dataobj to remove empty rows in multiple fields.
 * Called tidy from each commit() method
 * Removed broken blank-row-removed from database module.
 * Fixed warning in Boolean caused by recent changes.
 * Fixed typo in Access where timestamp should have been datestamp.
 * More attempts to fix that weird abstractsearch no results bug.
 * Fixed import to only ask about userid if we are actually importing.

2006-12-13 tmb
 * added funders, projects and divisions fields
 * added default organisation structure hierarchy for divisions field
 * added lookup script which attempts to detect and prevent duplicate deposits
    by looking at the title being entered

2006-12-13 cjg
 * Fixed bug that workflow next/prev didn't look at current data, but pre-
    update from form data.

2006-12-13 tmb
 * Prettier import screen
 * Import screen complains if no file/data given
 * Test run and Test run + Import actions for import screen

2006-12-13 cjg
 * Fixed OldXML export.

2006-12-13 tmb
 * Added redirect_to_me_url subs to fix Public::RequestCopy and Request::Respond screens 
 * Removed "click here" from request copy email